--- a/main.html
+++ b/main.html
@@ -4,12 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<title>"Welcome to the world of Web dovelopment"</title>
+	
 </head>
 
 <body>
 	
-	<div id="text">"Welcome to the world of Web dovelopment"</div>
+	<div id="text"><b>"Welcome to the world of Web dovelopment"</b></div>
 	
 
 
