--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 
 <body>
 	
-	<div id="text"><b>"Welcome to the world of Web dovelopment"</b></div>
+	<div id="text">
+		<h1>"Welcome to the world of Web dovelopment"</h1>
+	</div>
 	
 
 
