--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 
 <body>
 	
-	<div id="text">
-		<h1>"Welcome to the world of Web dovelopment"</h1>
+	<div>
+		<h1 id="text">"Welcome to the world of Web dovelopment"</h1>
 	</div>
 	
 
