--- a/main.html
+++ b/main.html
@@ -9,9 +9,7 @@
 
 <body>
 	
-	<div id="text">"Welcome to the world of Web dovelopment"
-		
-	</div>
+	<div id="text">"Welcome to the world of Web development"</div>
 	
 
 
