--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	
-	<div id="text">"Welcome to the world of Web development"</div>
+	<div id="text">'Welcome to the world of Web development'</div>
 	
 
 
