--- a/main.html
+++ b/main.html
@@ -9,12 +9,13 @@
 
 <body>
 	
-	<div id="text" >"Welcome to the world of Web development"</div>
+	<div>
+		<h1 id="text" >"Welcome to the world of Web development"</h1>
+	</div>
 	
 
 
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
