--- a/main.html
+++ b/main.html
@@ -9,9 +9,8 @@
 
 <body>
 	
-	<div>
-		<h1 id="text" >"Welcome to the world of Web development"</h1>
-	</div>
+	<div id="text" >Welcome to the world of Web development</div>
+		
 	
 
 
